<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailFoodActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.Foodcy.AppBarOverlay"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/FontMenu"
            app:title="Detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_back"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize">

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:fillViewport="true"
        android:layout_below="@id/appbar_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="64dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <ImageView
                android:layout_marginTop="32dp"
                android:id="@id/img_food"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/food"/>

            <TextView
                android:layout_marginTop="16dp"
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                style="@style/FontRegular.Bold"/>

            <TableLayout
                android:layout_marginTop="32dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">


                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:text="@string/preparation_time"
                        android:layout_column="1"
                        style="@style/TextTable.Field"/>

                    <TextView
                        android:id="@+id/tv_prep_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/TextTable.Value"
                        android:layout_column="2"
                        />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:text="@string/cook_time"
                        android:layout_column="1"
                        style="@style/TextTable.Field"/>

                    <TextView
                        android:id="@+id/tv_cook_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/TextTable.Value"
                        android:layout_column="2"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:text="@string/ingredients"
                        android:layout_column="1"
                        style="@style/TextTable.Field"/>

                    <TextView
                        android:id="@+id/tv_ingredients"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/TextTable.Value"
                        android:layout_column="2"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:text="@string/calories"
                        android:layout_column="1"
                        style="@style/TextTable.Field"/>

                    <TextView
                        android:id="@+id/tv_calories"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/TextTable.Value"
                        android:layout_column="2"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:text="@string/diet"
                        android:layout_column="1"
                        style="@style/TextTable.Field"/>

                    <TextView
                        android:id="@+id/tv_diet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/TextTable.Value"
                        android:layout_column="2"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:text="@string/diabetes_friendly"
                        android:layout_column="1"
                        style="@style/TextTable.Field"/>

                    <TextView
                        android:id="@+id/tv_diebetes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/TextTable.Value"
                        android:layout_column="2"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:text="@string/flavor"
                        android:layout_column="1"
                        style="@style/TextTable.Field"/>

                    <TextView
                        android:id="@+id/tv_flavor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/TextTable.Value"
                        android:layout_column="2"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:text="@string/course"
                        android:layout_column="1"
                        style="@style/TextTable.Field"/>

                    <TextView
                        android:id="@+id/tv_course"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/TextTable.Value"
                        android:layout_column="2"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:text="@string/halal"
                        android:layout_column="1"
                        style="@style/TextTable.Field"/>

                    <TextView
                        android:id="@+id/tv_halal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/TextTable.Value"
                        android:layout_column="2" />
                </TableRow>
            </TableLayout>
        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_marginBottom="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:padding="4dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/bg_fav_btn"
            android:elevation="1dp"
            android:padding="6dp">
            <ToggleButton
                android:id="@+id/tb_fav"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@drawable/favorite_toggle"
                android:textOff=""
                android:textOn=""/>
        </LinearLayout>

        <Button
            android:id="@+id/btn_link_recipes"
            android:layout_marginStart="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/see_the_recipes"
            style="@style/FontRegular"
            android:textColor="@color/white"
            android:elevation="1dp"/>

    </LinearLayout>


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</RelativeLayout>